--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Пример веб-страницы</title>
     <link rel="stylesheet" href="main.css">
   </head>
