--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
             </g>
           </svg>
           <div class="footer-content">
-            <span class="motivation">Download app</span>
-            <span class="tagline">Show everyone what you can do!</span>
+            <span class="footer-motivation">Download app</span>
+            <span class="footer-tagline">Show everyone what you can do!</span>
           </div>
         </div>
         <div class="buttons">
